Clarify Finagle positioning.

--- a/_posts/2016-04-12-rpc.markdown
+++ b/_posts/2016-04-12-rpc.markdown
@@ -8,7 +8,6 @@ group: pl
 
 _This is one post in a series about programming models and languages for distributed computing that I'm writing as part of my [history of distributed programming techniques](https://github.com/cmeiklejohn/PMLDC)._
 
-
 <h2 id="relevant-reading">Relevant Reading</h2>
 <ul>
 <li><p><em>A Note On Distributed Computing</em>, Kendall, Waldo, Wollrath, Wyant, 1994 <span class="citation">Kendall et al. (1994)</span>.</p></li>
@@ -132,8 +131,8 @@ _This is one post in a series about programming models and languages for distrib
 <li><p><strong>Representational State Transfer (REST)</strong>: REST is good: it specifically addresses the problem of managing distributed resources; but most frameworks built on top of REST alter the abstraction and present something that repeats the problem <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>.</p></li>
 </ul>
 <h2 id="impact-and-implementations">Impact and Implementations</h2>
-<p>Remote Procedure Call (RPC) has been around for a very long time and while many opponents of RPC have been extremely critical of it, it still remains one of the most widely used way of writing distributed applications. There’s an unprecedented amount of use of frameworks for RPC like Twitter’s Finagle, Google’s Protocol Buffers, and Apache’s Thrift deployed and used in production applications every day.</p>
-<p>Newer frameworks, such as Google’s gRPC for HTTP/2.0 continue to reduce the amount of complexity in building applications with them, attempting to bring RPC to an even wider audience. These frameworks claim that since they do not attempt to hide that the calls are remote, that it is a better abstraction. However, now we have returned to the aforementioned problem of soft mounting in NFS: explicitly handling the flow control from the array of possible network exceptions that could occur.</p>
+<p>Remote Procedure Call (RPC) has been around for a very long time and while many opponents of RPC have been extremely critical of it, it still remains one of the most widely used way of writing distributed applications. There’s an unprecedented amount of use of frameworks for RPC like Google’s Protocol Buffers, and Apache’s Thrift deployed and used in production applications every day.</p>
+<p>Frameworks such as Google’s gRPC for HTTP/2.0 and Twitter’s Finagle continue to reduce the amount of complexity in building applications with them, attempting to bring RPC to an even wider audience. For instance, Twitter’s Finagle is protocol-independent and attempts to deal with the problems of distribution directly. Finagle does this through the use of futures, which allow composition and explicit sequencing; Google’s gRPC does similar. These frameworks claim that since they do not attempt to hide the fact that the calls are remote, that it provides a better abstraction. However, now we have returned to the aforementioned problem of soft mounting in NFS: explicitly handling the flow control from the array of possible network exceptions that could occur, though mitigated through the use of promises/futures <a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a>.</p>
 <p>But, the question we have to ask ourselves is whether the abstraction of an individual method invocation or function call is the correct paradigm for building distributed applications. Is the idea of treating all remote objects as local, and making distribution as transparent as possible, the correct decision moving forward? Does it mask failure modes that will allow developers to build applications that will not operate correctly under partial failure?</p>
 <p>When we talk about distributed programming languages today, many developers equate this to <strong>programming languages</strong> that can be, and have been used, to build <strong>distributed systems.</strong> For example, any language with concurrency primitives and the ability to open a network socket would suffice to build these systems; this does not imply that these languages are distributed programming languages.</p>
 <p>But, a <strong>distributed programming language</strong> is where the distribution is <strong>first class</strong>. Languages like Go are more closely related to <strong>concurrent</strong> languages, where concurrency is first class; and, while concurrency is a requirement for distribution, these are different topics. CORBA is an example of trying to make distribution first class in languages such as C++.</p>
@@ -180,5 +179,6 @@ _This is one post in a series about programming models and languages for distrib
 <hr />
 <ol>
 <li id="fn1"><p>For instance, if one was to build an object model on top of REST.<a href="#fnref1">↩</a></p></li>
+<li id="fn2"><p>Our related post on promises and futures challenges whether that abstraction is right either.<a href="#fnref2">↩</a></p></li>
 </ol>
 </div>
